--- a/projects/spitball/src/index.html
+++ b/projects/spitball/src/index.html
@@ -1,14 +1,24 @@
 <!doctype html>
 <html lang="en">
 <head>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   <meta charset="utf-8">
+
+<meta name="Description" content="Author: A.N. Author, 
+Illustrator: P. Picture, Category: Books, Price: $17.99, 
+Length: 784 pages">
+
   <title>Spitball</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#1976d2">
 </head>
 <body>
   <app-root></app-root>
 </body>
+<noscript>Your browser does not support JavaScript!</noscript>
 </html>
